syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "github.com/Ghaarp/chat-server/api/chat_v1;chat_v1";

service ChatV1 {
    rpc Create(CreateRequest) returns (CreateResponse){
        option (google.api.http) = {
            post: "/chat/v1/create"
            body: "*"
        };
    };

    rpc Delete(DeleteRequest) returns (DeleteResponse){
        option (google.api.http) = {
            delete: "/auth/v1"
        };
    };

    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse){
        option (google.api.http) = {
            post: "/chat/v1/sendMessage"
            body: "*"
        };
    };
}

message CreateRequest {
    int64 author = 1;
    string chatName = 2;
    repeated int64 users = 3;
}

message CreateResponse {
    int64 id = 1;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {}

message SendMessageRequest {
    int64 from = 1;
    int64 chatid = 2;
    string text = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message SendMessageResponse {}
